2014-11-20  Julien Bect  <julien.bect@supelec.fr>

	stk_param_estim.m: Provide a value for param0 if needed.

	* paramestim/stk_param_estim.m: Provide a value for param0 if needed.

	stk_param_estim.m: Empty is the same as not provided.

	* paramestim/stk_param_estim.m: Empty is the same as not provided.

	stk_param_estim.m: Simplify variable names.

	* paramestim/stk_param_estim.m: Simplify variable names, param0lnv
	-> lnv0, paramlnvopt -> lnvopt.

	stk_param_estim.m: Always return something meaningful for lnv.

	* paramestim/stk_param_estim.m: Always return something meaningful
	for lnv: when the variance of the noise is not estimated, return
	model.lognoisevariance. Update the function documentation
	following this and earlier changes.

2014-11-08  Julien Bect  <julien.bect@supelec.fr>

	stk_param_estim.m: Estimate lnv if lognoisevariance is nan.

	* paramestim/stk_param_init_lnv.m: New function that provides a
	rough estimate of the variance of the noise for a given model.
	* admin/octpkg/INDEX: Include stk_param_init_lnv.m.
	* paramestim/stk_param_estim.m: Estimate the variance of the noise
	if the lognoisevariance field is nan, using as a starting point
	the value returned by stk_param_init_lnv.
	* examples/01_kriging_basics/stk_example_kb04.m: Demonstrate how
	it is possible to estimate the variance of the noise without
	providing a initial guess for it.

2014-11-06  Julien Bect  <julien.bect@supelec.fr>

	Handle empty lognoisevariance field as if missing.

	* core/stk_make_matcov.m: Handle empty lognoisevariance field as
	if missing.
	* core/stk_model.m: Idem.
	* doc/dev/model.texi: Idem.
	* paramestim/stk_param_estim.m: Idem.
	* paramestim/stk_param_init.m: Idem.
	* paramestim/stk_param_relik.m: Idem.

2014-11-03  Julien Bect  <julien.bect@supelec.fr>

	Add a 'pairwise' argument to stk_noisecov.

	* covfcs/stk_noisecov.m: Add a 'pairwise' argument.
	* core/stk_make_matcov.m: Use the new 'pairwise' argument.
